# Sistema-indicadores

./: .gitignore  01_INSTALAR_DEPENDENCIAS.bat  02_EXECUTAR_TESTES.bat  03_TESTAR_NO_PYTHON.bat  04_GERAR_EXE.bat  05_ABRIR_EXE.bat  Central_APS.spec  LEIA_PRIMEIRO.txt  aps_aprazamento.py  aps_cli.py  aps_clonador_interativo.py  aps_comparador_paciente.py  aps_dashboard.py  aps_dashboard_lite.py  aps_dashboard_v3.py  aps_editor_lite.py  aps_exportar_pdf.py  aps_historico.py  aps_interface.py  aps_log.py  aps_plugins.py  aps_reprocessar.py  aps_tema.py  aps_utils.py  c1_mais_acesso.py  c1_oficial.py  c2_infantil.py  c3_gestacao.py  c4_diabetes.py  c5_hipertensao.py  c6_idoso.py  c7_mulher.py  config.toml  controle_quadrimestral.py  pyproject.toml  sistema_aps.py
APS_3EM1_ISOLADO/: GERAR_EXE_3EM1.bat  LEIA-ME.txt
APS_3EM1_ISOLADO/src/: aps_clonador_interativo.py  aps_config.py  aps_dashboard.py  aps_lite_3em1.py  aps_utils.py
APS_LITE_ISOLADO/: LEIA-ME.txt
APS_LITE_ISOLADO/spec/: APS_Dashboard_Lite.spec  APS_Editor_Lite.spec
APS_LITE_ISOLADO/src/: aps_clonador_interativo.py  aps_comparador_paciente.py  aps_dashboard_lite.py
plugins/: c8_exemplo.py
tests/: test_aprazamento.py  test_clonador_interativo.py  test_controle_quadrimestral.py  test_indicadores.py
